--- a/day-71-starting-files-blog-for-deployment/templates/header.html
+++ b/day-71-starting-files-blog-for-deployment/templates/header.html
@@ -44,7 +44,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="https://www.instagram.com/firesidelatte/">@firesidelatte</a>
+        <a class="navbar-brand" href="{{ url_for('get_all_posts') }}">@firesidelatte</a>
         <button
           class="navbar-toggler"
           type="button"
